--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: ModRef 2017
+description: "ModRef 2017: The Sixteenth International Workshop on Constraint Modelling and Reformulation"
