--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-tactile
+theme: jekyll-theme-cayman
 title: ModRef 2017
 description: "ModRef 2017: The Sixteenth International Workshop on Constraint Modelling and Reformulation"
+show_downloads: false
+# google_analytics: [Your Google Analytics tracking ID]
