--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-cayman
 title: ModRef 2017
 description: "ModRef 2017: The Sixteenth International Workshop on Constraint Modelling and Reformulation"
 show_downloads: false
-# google_analytics: [Your Google Analytics tracking ID]
+google_analytics: 'UA-99062547-1'
